fix(canvas): images appearing muted in dark mode (closes #5708)

--- a/apps/client/src/stylesheets/style.css
+++ b/apps/client/src/stylesheets/style.css
@@ -2433,3 +2433,7 @@ iframe.print-iframe {
     width: 0;
     height: 0;
 }
+
+.excalidraw.theme--dark canvas {
+    --theme-filter: invert(100%) hue-rotate(180deg);
+}
